@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 10-01-2006 fixed: Settings passwords were displayed plain text on edit.
+ - 10-01-2006 fixed: Controls with no visibility animations were always shown, regardless of their <visible> tag.
+ - 10-01-2006 fixed: Settings Slider controls weren't centered.
  - 10-01-2006 fixed: text boxes displaying no text.
  - 10-01-2006 fixed: playlist hanging when randomize is enabled
  - 10-01-2006 changed: disabled seeking when ff/rw in menu and partially fixed rewind. only fast rewinds work
